--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -118,9 +118,10 @@
 
                 <p:column priority="1">
                     <p:commandLink  value="#{bundle.GoToProcess}"
-                                    rendered="#{item.task != null}"
+                                    rendered="#{item.process != null}"
                                     actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
                                     oncomplete="document.getElementById('mainFRM:openProcessBtn').click();"/>
+                    <p:spacer width="5"/>
                     <p:commandLink  value="#{bundle.GoToTask}"
                                     rendered="#{item.task != null}"
                                     actionListener="#{userMsgBean.onSetSelectedMessage(item)}"
