--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -42,7 +42,7 @@
                     <f:param name="isRequired" value="true"/>
                 </p:menuitem>
                 <p:menuitem value="#{bundle.SendJustDoNotAgree}" icon="ui-icon-play" update="mainFRM"
-                            actionListener="#{processCardBean.onRun('not_agree')}"
+                            actionListener="#{processCardBean.onRun('send_notagree')}"
                             oncomplete="return itemChange = 0;">
                     <f:param name="isRequired" value="true"/>
                 </p:menuitem>
@@ -131,13 +131,12 @@
 
             <p:tab title="#{bundle.ApprovalSheet}">
                 <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" > 
-                    <h:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces" >                         
+                    <h:panelGroup styleClass="ui-grid-col-12 without-spaces" >                         
                         <p:outputLabel value="#{bundle.NumberSheetConcorder}:" />
-                        <p:inputText value="#{processCardBean.editedItem.regNumber}" title="#{bundle.AutomaticallyGenerated}" 
-                                     styleClass="ui-grid-col-12"
+                        <p:inputText value="#{processCardBean.editedItem.regNumber}" title="#{bundle.AutomaticallyGenerated}"                                      
                                      placeholder="#{bundle.AutomaticallyGenerated}"
                                      readonly="true"/>
-                    </h:panelGrid>
+                    </h:panelGroup>
                     
                     <p:dataTable id="concorderList" value="#{processCardBean.editedItem.getReports()}" var="report" emptyMessage="#{bundle.EmptyTable}"
                                  rowKey="#{report.tempId}" selectionMode="single" 
